@@ -110,3 +110,41 @@ mvn gatling:test -Dgatling.simulationClass=ee.cyber.cdoc2.server.RpServerLoadTes
 ```
 mvn gatling:test -Dgatling.simulationClass=ee.cyber.cdoc2.server.RpServerConstantLoadTests
 ```
+
+## Docker
+
+### Build image
+
+From `cdoc2-rp-server` directory:
+
+````
+mvn clean install
+docker build -t cdoc2-rp-server-gatling .
+````
+
+### Run
+
+Create results directory
+
+````
+mkdir -p results
+````
+
+The docker commands expect an `application.conf` file in the working directory
+
+replace `RpServerFunctionalTests` with `RpServerLoadTests` or `RpServerConstantLoadTests` to
+run load tests
+
+````
+docker run --rm --network host \
+  --user "$(id -u):$(id -g)" \
+  -v "$(pwd)/results:/gatling/results" \
+  -v "$(pwd)/application.conf:/gatling/application.conf:ro" \
+  -e MAIN_CLASS=io.gatling.app.Gatling \
+  -e MAIN_CLASS_ARGS="-s ee.cyber.cdoc2.server.RpServerFunctionalTests -rf /gatling/results" \
+  -e JAVA_OPTS="-Xmx2g \
+  -Dconfig.file=application.conf \
+  --add-opens java.base/java.lang=ALL-UNNAMED \
+  -Dlogback.configurationFile=/gatling/logback.xml" \
+  cdoc2-auth-server-gatling
+````
